<resources>
    <string name="app_name">کریپتولاین</string>
    <string name="splash_app_name">کریپتولاین</string>
    <string name="potfolio_add_btn">افزودن تاریخچه معامله</string>
    <string name="portfolio_title">سبد دارایی دیجیتال</string>
    <string name="portfolio_notation">با وارد کردن میزان دارایی های خود در این بخش میتوانید بر میزان سود و زیان، تغییرات قیمتی و ارزش ریالی و دلاری دارایی های خود نظارت لحظه ای داشته باشید.</string>
    <string name="totalAmountText">مقدار کل %s</string>
    <string name="DateAndRateText">%s - دلار:%sتومان</string>
    <string name="totalCapital">ارزش دارایی:%sتومان</string>
    <string name="priceAndChart">قیمت و نمودار %s</string>
    <string name="details">جزییات %s</string>
    <string name="view_count_news">پسندیده شده توسط %d و دیده شده توسط %d نفر</string>
    <string name="cryptoName">نام ارز</string>
    <string name="price">قیمت</string>
    <string name="dailyChange">نوسان روزانه</string>
    <string name="comments">دیدگاه ها</string>
    <string name="cryptoExchanger">مبدل ارز</string>
    <string name="portfolio">پورتفوی</string>
    <string name="market">بازار</string>
    <string name="blog">اخبار</string>
    <string name="settings">تنظیمات</string>
    <string name="newContents">جدید ترین مطالب</string>
    <string name="savedNews">خبر های ذخیره شده</string>
    <string name="emptyBookmarkList">لیست ذخیره شده ها خالی است</string>
    <string name="startCommenting">به بحث بپیوندید</string>
    <string name="sendComment">ارسال دیدگاه</string>
    <string name="commentCounter">%dدیدگاه</string>
    <string name="view_on_source">منبع اصلی</string>
    <string name="enterSearchWord">لطفا عبارت مورد نظر خود را وارد نمایید</string>
    <string name="search">جستوجو</string>
    <string name="cryptoExchange">مبدل ارز های دیجیتال</string>
    <string name="dollarEquality">معادل دلاری</string>
    <string name="tomanPrice">ارزش به تومان</string>
    <string name="tetherCaculation">محاسبه با نرخ تتر</string>
    <string name="toman">تومان</string>
    <string name="markerCap">ارزش کل بازار</string>
    <string name="tetherRate">نرخ تتر</string>
    <string name="addToWatchList">افزودن به تحت نظر</string>
    <string name="fullChart">چارت تمام صفحه</string>
    <string name="dominance">تسلط به بازار</string>
    <string name="marketCoins">میزان ارز در گردش</string>
    <string name="totalSupply">عرضه کل</string>
    <string name="yearlyChange">تغییرات یکساله</string>
    <string name="sixMChanges">تغییرات شش ماهه</string>
    <string name="monthlyChanges">تغییرات ماهانه</string>
    <string name="weeklyChanges">تغییرات هفتگی</string>
    <string name="dailyChanges">تغییرات روزانه</string>
    <string name="dalilyVolume">حجم معاملات</string>
    <string name="rate">رتبه</string>
    <string name="exchangerName">نام صرافی</string>
    <string name="dailyDealVolume">حجم معاملات روزانه</string>
    <string name="dateStablished">تاسیس</string>
    <string name="mobileEdit">ویرایش موبایل</string>
    <string name="enterNewNumber">شماره موبایل جدید خود را وارد کنید</string>
    <string name="verificationCode">کد فعال سازی</string>
    <string name="sendVerificationCode">دریافت کد تایید</string>
    <string name="editNumber">ویرایش شماره</string>
    <string name="customization">شخصی سازی</string>
    <string name="fewerThan">کمتر از</string>
    <string name="moreThan">بیشتر از</string>
    <string name="alarmRepeat">تکرار هشدار</string>
    <string name="save">ذخیره</string>
    <string name="anounsement">اطلاعیه ها</string>
    <string name="priceAnounsment">اطلاعیه های قیمت</string>
    <string name="importantNewsAnounsment">اطلاعیه های اخبار مهم</string>
    <string name="portfolioAnounsment">اطلاعیه های پورتفوی</string>
    <string name="customizeAnounsments">شخصی سازی اطلاعیه ها</string>
    <string name="craeteCustomization">ایجاد شخصی سازی</string>
    <string name="edit">ویرایش</string>
    <string name="version">ورژن %s</string>
    <string name="login">ورود به حساب کاربری</string>
    <string name="notifications">اطلاع رسانی ها</string>
    <string name="nightMode">حالت شب</string>
    <string name="fontSize">اندازه فونت</string>
    <string name="englishLanguage">زبان انگلیسی</string>
    <string name="haveAnyQuestion">سوالی دارید؟</string>
    <string name="firstUser">تازه وارد هستید؟</string>
    <string name="errorReport">گزارش خطا</string>
    <string name="resources">اطلاعات و منابع</string>
    <string name="logout">خروج</string>
    <string name="followUs">ما را در شبکه های اجتماعی دنبال کنید</string>
    <string name="loginAndSignUp">ورود/ثبت نام</string>
    <string name="phoneNumber">شماره موبایل</string>
    <string name="logIn">ورود</string>
    <string name="nameAndLastname">نام و نام خانوادگی</string>
    <string name="email">ایمیل</string>
    <string name="change">تغییر</string>
    <string name="editPortfolioName">ویرایش نام تاریخچه</string>
    <string name="name">نام</string>
    <string name="transaction">تراکنش</string>
    <string name="cryptoCount">ارز/تعداد</string>
    <string name="dollarAggregation">جمع و نوسان دلاری</string>
    <string name="tomanAggregation">جمع و نوسان تومانی</string>
    <string name="addNewDeal">افزودن معامله جدید</string>
    <string name="capitalVariationChart">چارت گوناگونی سبد دارایی</string>
    <string name="buy">خرید</string>
    <string name="sell">فروش</string>
    <string name="portfolioName">نام تاریخچه</string>
    <string name="count">تعداد</string>
    <string name="dollar">دلار</string>
    <string name="description">توضیحات</string>
    <string name="Accessibility">دسترسی</string>
    <string name="exchangers">صرافی ها</string>
    <string name="watchList">تحت نظر</string>
    <string name="cryptocurrency">ارز های دیجیتال</string>
    <string name="total_fund">کل دارایی:</string>
    <string name="all">همه</string>
    <string name="etherum">اتریوم</string>
    <string name="altcoins">آلتکوین</string>
    <string name="tradingSignals">تحلیل قیمت</string>
    <string name="bitcoin">بیت کوین</string>
    <string name="addwatch">افزودن به لیست مورد علاقه؟</string>
    <string name="deletewatch">حذف از لیست مورد علاقه؟</string>
    <string name="one">نمای بازار</string>
    <string name="two">مقایسه ارزها</string>
    <string name="three">مفاهیم مربوطه </string>
    <string name="four">تشریح موضوعات </string>
    <string name="five">ماینرها </string>
    <string name="six">سود استخراج</string>
    <string name="seven">فاندامنتال </string>
    <string name="eight">تکنیکال </string>
    <string name="nine">پر نوسان ها</string>
    <string name="ten">انفجار بزرگ</string>
    <string name="eleven">نصیحت بزرگان</string>
    <string name="twelve">اینفوگرافی </string>
    <string name="threeteen">شبکه بیت کوین</string>
    <string name="fourteen">استک(پشته)</string>
    <string name="fifteen">قله قیمت</string>
    <string name="close">بستن</string>
    <string name="deleteTransaction">آیا مایلید این تراکنش حذف شود؟</string>
    <string name="cancel">انصراف</string>
    <string name="confirm">تایید</string>
    <string name="loadingData">در حال دریافت اطلاعات …</string>
    <string name="Copied">کپی شد!</string>
    <string name="always">همیشه</string>
    <string name="deleteNotification">آیا مایلید این اعلان حذف شود؟</string>
    <string name="enterCorrectAmount">لطفا مقدار را درست وارد کنید</string>
    <string name="noDescription">بدون توضیحات!</string>
    <string name="addDeal">افزودن معامله</string>
    <string name="deletePortfolio">آیا مایلید این تاریخچه حذف شود؟</string>
    <string name="enterNewParameter">لطفا مقدار جدیدی را وارد کنید</string>
    <string name="requireField">این فیلد الزامی است</string>
    <string name="loadingError">خطا در بروزرسانی اطلاعات</string>
    <string name="updateInfoSucces">اطلاعات شما با موفقیت بروز شد</string>
    <string name="sendingInformation">در حال ارسال اطلاعات …</string>
    <string name="userProfile">پروفایل کاربری</string>
    <string name="once">یک بار</string>
    <string name="errorOrder">خطایی در ارسال سفارش رخ داده است</string>
    <string name="updateComplete">اطلاعات شما با موفقیت بروز شد</string>
    <string name="sendingSuccess">کد ارسال شد. لطفا کد دریافتی را در کادر وارد کنید</string>
    <string name="invalidCode">کد نامعتبر است</string>
    <string name="invalidNumber">شماره تلفن همراه نامعتبر است</string>
    <string name="sendAgain">ارسال دوباره</string>
    <string name="done">انجام شد</string>
    <string name="errorLog">خطایی رخ داده است</string>
    <string name="dollarPrice">قیمت تتر:</string>
    <string name="time">زمان:</string>
    <string name="addToWatchlist">افزودن به تحت نظر</string>
    <string name="deleteFromWatchlist">حذف از تحت نظر</string>
    <string name="notificationDisabled">اعلانات غیر فعال است. لطفا از بخش تنظیمات ،اعلانات را فعال کنید.</string>
    <string name="connect">اتصال</string>
    <string name="help">راهنما</string>
    <string name="connectionFailure">ارتباط با اینترنت میسر نیست</string>
    <string name="openUrlWith">باز کردن صفحه وب با …</string>
    <string name="fingerPrintLock">قفل اثر انگشت</string>
    <string name="log">ورود</string>
    <string name="enterPassword">لطفا پسوردی را انتخاب کنید</string>
    <string name="enterPasswordAgain">لطفا پسورد را دوباره وارد کنید</string>
    <string name="wrongpin">پین اشتباه است</string>
    <string name="nameUsed">این نام قبلا استفاده شده است</string>
    <string name="slogan">همراه شما در سرمایه گذاری بازار رمز ارز</string>
    <string name="testClose">برای خروج مجدد دکمه برگشت را بزنید</string>
    <string name="exchangerSubtitle">بررسی لحظه ای نرخ ها،نرخ تبدیل ارز ها و…</string>
    <string name="select_crypto">انتخاب ارز</string>
    <string name="searchSubtitle">ارز مورد نظر خود را از لیست انتخاب کنید.</string>
    <string name="dollarPriceToman">قیمت تتر (تومان)</string>
    <string name="grant_permission">برای ادامه لطفا دسترسی های مورد نیاز برنامه را بدهید</string>
    <string name="continu">ادامه</string>
    <string name="priceWarning">هشدار قیمت</string>
    <string name="downwardPriceWarning">قیمت %s به زیر سطح %s دلار رسید.</string>
    <string name="upwardPriceWarning">قیمت %s به بالای سطح %s دلار رسید.</string>
    <string name="priceChanges">تغییرات قیمت %s</string>
    <string name="dailyPriceChangeAmount">میزان تغییرات روزانه قیمت: %s</string>
    <string name="portfolioNotification">پرتفوی %s</string>
    <string name="portfolioNotificationContent">ارزش %s تومان | درصد تغییر %s</string>

</resources>