<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/exchanger"
        android:icon="@drawable/ic_baseline_exchange"
        android:title="@string/cryptoExchanger"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/portfolio"
        android:icon="@drawable/ic_baseline_portfolio"
        android:title="@string/portfolio"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/marketWatch"
        android:icon="@drawable/ic_baseline_market"
        android:title="@string/market"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/blog"
        android:icon="@drawable/ic_baseline_blog"
        android:title="@string/blog"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/others"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/settings"
        app:showAsAction="ifRoom"/>

</menu>