<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="?colorPrimary"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/exchanger_progressBar"
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content"/>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/exchanger_main_nested"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/sort_refresh"
                    android:layout_width="0dp"
                    android:layout_weight="7"
                    android:layout_height="wrap_content"
                    android:text="#"
                    android:gravity="end"
                    android:textSize="@dimen/TextSize2x"
                    android:layout_marginEnd="@dimen/standardMargin0.5x"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="10"
                    android:textSize="@dimen/TextSize2x"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textDirection="ltr"
                    android:gravity="center_vertical"
                    android:src="@drawable/btc_icon"
                    />

                <TextView
                    android:id="@+id/sort_by_name"
                    android:layout_width="0dp"
                    android:layout_weight="25"
                    android:layout_marginStart="@dimen/standardMargin"
                    android:layout_gravity="center"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/TextSize2x"
                    android:textDirection="ltr"
                    android:layout_height="wrap_content"
                    android:text="@string/exchangerName"/>

                <TextView
                    android:id="@+id/sort_by_price"
                    android:layout_width="0dp"
                    android:layout_weight="30"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textSize="@dimen/TextSize2x"
                    android:gravity="center_horizontal"
                    android:paddingStart="@dimen/standardMargin0.5x"
                    android:layout_marginStart="@dimen/standardMargin"
                    android:text="@string/dailyDealVolume"/>

                <TextView
                    android:id="@+id/sort_by_daily_change"
                    android:layout_width="0dp"
                    android:layout_weight="20"
                    android:gravity="end"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/standardMargin"
                    android:layout_gravity="center"
                    android:textDirection="ltr"
                    android:textSize="@dimen/TextSize2x"
                    android:text="@string/dateStablished"
                    />
                <TextView
                    android:id="@+id/sort_by_comments"
                    android:layout_width="0dp"
                    android:layout_weight="15"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="@dimen/TextSize2x"
                    android:gravity="center"
                    android:text="@string/rate"
                    />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/exchanger_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</RelativeLayout>