<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/main_frame"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    android:background="?colorPrimary"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.08">

        <com.dust.extracker.customviews.CTextView
            android:id="@+id/access_txt"
            android:layout_width="match_parent"
            android:gravity="center"
            android:visibility="gone"
            android:layout_height="match_parent"
            android:textSize="15sp"
            android:textColor="?android:textColor"
            android:text="@string/Accessibility"/>

        <RelativeLayout
            android:id="@+id/header_rel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/standardMargin"
            android:paddingBottom="@dimen/standardMargin"
            android:gravity="center">

            <ImageView
                android:id="@+id/img_search"
                android:layout_width="32dp"
                android:layout_height="32dp"
                app:tint="?colorAccent"
                android:layout_marginStart="@dimen/standardMargin"
                android:src="@drawable/search" />

            <ImageView
                android:id="@+id/notificationIcon"
                android:layout_width="28dp"
                android:layout_marginStart="@dimen/standardMargin"
                android:layout_height="28dp"
                android:visibility="gone"
                app:tint="?colorAccent"
                android:layout_toEndOf="@+id/img_search"
                android:src="@drawable/ic_baseline_notifications" />

            <LinearLayout
                android:id="@+id/txt_tetherRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:gravity="center"
                android:layout_marginHorizontal="@dimen/standardMargin2x"
                android:orientation="vertical"
                >
                <com.dust.extracker.customviews.CTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?colorAccent"
                    android:textSize="@dimen/standardMargin"
                    android:text="@string/tetherRate"/>

                <com.dust.extracker.customviews.CTextView
                    android:id="@+id/dollar_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?android:textColor"
                    android:layout_marginTop="8dp"
                    android:text="_"
                    android:textSize="@dimen/standardMargin"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/marketCap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_alignTop="@+id/txt_tetherRate"
                android:layout_centerInParent="true"
                >
                <com.dust.extracker.customviews.CTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?colorAccent"
                    android:textSize="@dimen/standardMargin"
                    android:text="@string/markerCap"
                    />

                <com.dust.extracker.customviews.CTextView
                    android:id="@+id/totalMarketCap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textColor="?android:textColor"
                    android:textSize="@dimen/standardMargin" />
            </LinearLayout>


        </RelativeLayout>

        <LinearLayout
            android:id="@+id/search_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone"
            android:layoutDirection="ltr"
            android:gravity="center"
            android:paddingTop="@dimen/standardMargin"
            >
            <ImageView
                android:id="@+id/back_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:tint="?android:textColor"
                android:src="@drawable/ic_baseline_arrow_back"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/standardMargin"/>

            <EditText
                android:id="@+id/edt_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/search"
                android:textSize="@dimen/standardMargin1.5x"
                android:textColorHint="?colorAccent"
                android:textColor="?android:textColor"
                android:drawableTint="?colorAccent"
                android:padding="6dp"
                android:background="@drawable/edittext_selector"
                android:layout_marginHorizontal="@dimen/standardMargin"
                />
        </LinearLayout>


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.91"
        android:orientation="vertical">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/marketTabLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:tabIndicatorColor="@color/green_primary"
            app:tabIndicatorHeight="0dp"
            android:layoutDirection="ltr"
            android:layout_marginHorizontal="@dimen/standardMargin1.5x"
            app:tabBackground="@drawable/custom_tab_shape"
            app:tabTextAppearance="@style/customTabLayout"
            app:tabSelectedTextColor="@color/white"
            app:tabPaddingStart="5dp"
            app:tabPaddingEnd="5dp"
            app:tabTextColor="@color/green_light"/>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/marketViewPager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layoutDirection="ltr"
            android:overScrollMode="never"
            android:layout_weight="0.9" />
    </LinearLayout>


</LinearLayout>